--- a/weedwizard-server/pom.xml
+++ b/weedwizard-server/pom.xml
@@ -9,6 +9,7 @@
     <url>http://maven.apache.org</url>
 
     <build>
+        <sourceDirectory>src/main/java</sourceDirectory>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -35,9 +36,11 @@
                         </goals>
                         <configuration>
                             <transformers>
-                                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
-                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>com.newground.weedwizard.HelloWorldService</mainClass>
+                                <transformer
+                                        implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
+                                <transformer
+                                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                    <mainClass>com.newground.weedwizard.server.HelloWorldService</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
@@ -69,6 +72,11 @@
             <groupId>com.yammer.dropwizard</groupId>
             <artifactId>dropwizard-core</artifactId>
             <version>0.6.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.newground.weedwizard</groupId>
+            <artifactId>weedwizard-schemas</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 </project>
