--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,9 @@
     <url>http://maven.apache.org</url>
 
     <modules>
-        <module>weedwizard-server</module>
+        <module>weedwizard-api</module>
         <module>weedwizard-schemas</module>
+        <module>weedwizard-server</module>
     </modules>
     <dependencies>
         <dependency>
@@ -18,6 +19,11 @@
             <artifactId>junit</artifactId>
             <version>3.8.1</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.yammer.dropwizard</groupId>
+            <artifactId>dropwizard-core</artifactId>
+            <version>0.6.1</version>
         </dependency>
     </dependencies>
 </project>
