--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,20 @@
         <module>weedwizard-schemas</module>
         <module>weedwizard-server</module>
         <module>weedwizard-impl</module>
+        <module>weedwizard-db</module>
     </modules>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
