--- a/weedwizard-impl/pom.xml
+++ b/weedwizard-impl/pom.xml
@@ -7,6 +7,12 @@
     <version>1.0-SNAPSHOT</version>
     <name>weedwizard-impl</name>
     <url>http://maven.apache.org</url>
+
+    <parent>
+        <groupId>com.newground.weedwizard</groupId>
+        <artifactId>weedwizard</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
     <build>
         <sourceDirectory>src/main/java</sourceDirectory>
         <plugins>
@@ -43,12 +49,6 @@
         </plugins>
     </build>
     <dependencies>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>3.8.1</version>
-            <scope>test</scope>
-        </dependency>
         <dependency>
             <groupId>com.yammer.dropwizard</groupId>
             <artifactId>dropwizard-core</artifactId>
