--- a/weedwizard-schemas/pom.xml
+++ b/weedwizard-schemas/pom.xml
@@ -8,6 +8,11 @@
     <name>weedwizard-schemas</name>
     <url>http://maven.apache.org</url>
 
+    <parent>
+        <groupId>com.newground.weedwizard</groupId>
+        <artifactId>weedwizard</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
     <build>
         <plugins>
             <plugin>
@@ -55,12 +60,6 @@
         </plugins>
     </build>
     <dependencies>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>3.8.1</version>
-            <scope>test</scope>
-        </dependency>
         <dependency>
             <groupId>org.jsonschema2pojo</groupId>
             <artifactId>jsonschema2pojo-core</artifactId>
