--- a/weedwizard-server/pom.xml
+++ b/weedwizard-server/pom.xml
@@ -8,6 +8,11 @@
     <name>weedwizard-server</name>
     <url>http://maven.apache.org</url>
 
+    <parent>
+        <groupId>com.newground.weedwizard</groupId>
+        <artifactId>weedwizard</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
     <build>
         <sourceDirectory>src/main/java</sourceDirectory>
         <plugins>
@@ -62,12 +67,6 @@
         </plugins>
     </build>
     <dependencies>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>3.8.1</version>
-            <scope>test</scope>
-        </dependency>
         <dependency>
             <groupId>com.newground.weedwizard</groupId>
             <artifactId>weedwizard-api</artifactId>
