Superior notification handler on hotkey press
Created a jQuery based notification handler on hotkey press that will
appear and dissappear after 1.5seconds by injecting an iFrame into the
youtube page and subsequently removing the iframe element.

Requires separate notify css/html/js files for injection. As far as
permissions go, used the suggested method from:
http://stackoverflow.com/questions/15873904/adding-complex-html-using-a-chrome-content-script
to group all the scripts together and got web content permission for the
top level .html file with everything included inside.

Also, had to give jQuery handle to the inject.js by nesting executeScript calls
i.e. executeScript({jquery.js} executescript({inject.js})).

Lots more to do.

Close #9

--- a/client/manifest.json
+++ b/client/manifest.json
@@ -15,6 +15,9 @@
   "permissions": [
     "storage","activeTab", "tabs", "http://*/*", "https://*/*"
   ],
+
+  "web_accessible_resources": ["notify.html"],
+
   "browser_action": {
       "default_title": "Set this page's color.",
       "default_icon": "icon.png",
